syntax = "proto3";

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

import "common.proto";
import "integration_source.proto";
import "id.proto";

option java_package = "io.calixa.domain.conversation";
option java_multiple_files = true;
option optimize_for = SPEED;

package calixa.domain.conversation;

enum MessageSource {
    MESSAGE_SOURCE_UNSPECIFIED = 0;
    MESSAGE_SOURCE_WEBFORM = 1;
    MESSAGE_SOURCE_WEBCHAT = 2;
    MESSAGE_SOURCE_EMAIL = 3;
    MESSAGE_SOURCE_SMS = 4;
}

enum MessageVisibility {
    MESSAGE_VISIBILITY_UNSPECIFIED = 0;
    /* Public messages are shared with and published to the end-user. */
    MESSAGE_VISIBILITY_PUBLIC = 1;
    /* Internal messages may be notes, status updates, or private messages that the end-user does not see. */
    MESSAGE_VISIBILITY_INTERNAL = 2;
}

enum MessageDirection {
    MESSAGE_DIRECTION_UNSPECIFIED = 0;
    MESSAGE_DIRECTION_INBOUND = 1;
    MESSAGE_DIRECTION_OUTBOUND = 2;
}

enum MessageType {
    MESSAGE_TYPE_UNSPECIFIED = 0;
    MESSAGE_TYPE_CALL = 1;
    MESSAGE_TYPE_CUSTOM = 2;
    MESSAGE_TYPE_EMAIL = 3;
    MESSAGE_TYPE_FACEBOOK = 4;
    MESSAGE_TYPE_INTERCOM = 5;
    MESSAGE_TYPE_SMOOCH = 6;
    MESSAGE_TYPE_SMS = 7;
    MESSAGE_TYPE_TWEET = 8;
    MESSAGE_TYPE_TWEET_DM = 9;
    MESSAGE_TYPE_WHATSAPP = 10;
    MESSAGE_TYPE_ZENDESK = 11;
}

/**
 * Lightweight conversation and message participant until we map them into first-party Calixa entities.
 */
message UserLite {
    // RESERVED string account_user_id = 1;
    string external_user_id = 2;
    string name = 3;
    string email = 4;
}

message Conversation {
    string organization_id = 1;
    string conversation_id = 2;

    /* Cache internal users who have participated in this conversation or those who wish to be notified. */
    repeated string follower_user_ids = 3;

    /* External users who have participated in this conversation. */
    repeated string collaborator_user_ids = 4;

    repeated string message_ids = 5;

    string external_conversation_url = 6;
    string subject = 7;
    string canonical_id = 8;
    calixa.domain.integration.IntegrationSource integration_source = 9;

    google.protobuf.Timestamp created_at = 500;
    google.protobuf.Timestamp updated_at = 501;
    // Leave room for deleted_at.

    google.protobuf.Timestamp external_created_at = 510;
    google.protobuf.Timestamp external_updated_at = 511;
}

message Message {
    string organization_id = 1;
    string message_id = 2;

    string conversation_id = 3;

    string author_user_id = 4;

    // Temporarily inline author names into messages.
    string author_name = 11;
    string author_email = 12;

    MessageVisibility visibility = 5;
    MessageDirection message_direction = 8;
    /* Just the text */
    string body = 6;
    /* sms, email, twitter, web form, app */
    MessageSource message_source = 7;

    /* link to the message that the Console can load */
    string external_message_url = 10;

    repeated UserLite tos = 13;
    repeated UserLite ccs = 14;

    string canonical_id = 15;
    calixa.domain.integration.IntegrationSource integration_source = 16;
    MessageType message_type = 17;

    google.protobuf.Timestamp created_at = 500;
    google.protobuf.Timestamp updated_at = 501;
    // Leave room for deleted_at.

    google.protobuf.Timestamp external_created_at = 510;
    google.protobuf.Timestamp external_updated_at = 511;
}

message LatestMessage {
    Message message = 1;
    Conversation conversation = 2;
    repeated Attachment attachments = 3;
    repeated calixa.domain.id.EntityAssociation associations = 200;
}

message ConversationSummary {
    Conversation conversation = 1;
    int64 message_count = 2;
    UserLite author = 3;
    repeated UserLite participants = 4;
    repeated calixa.domain.id.EntityAssociation associations = 200;
}

message Attachment {
    string organization_id = 1;
    string attachment_id = 2;

    // Note: depending on the platform, attachments can be either related to the conversation or message.
    string conversation_id = 3;
    string message_id = 4;

    string url = 5; /* Calixa-internal storage */
    string original_url = 6; /* Stores original payload */
    string file_name = 7;
    string content_type = 8;

    string canonical_id = 9;
    calixa.domain.integration.IntegrationSource integration_source = 10;

    google.protobuf.Timestamp created_at = 500;
    google.protobuf.Timestamp updated_at = 501;
    // Leave room for deleted_at.

    google.protobuf.Timestamp external_created_at = 510;
    google.protobuf.Timestamp external_updated_at = 511;
}

service ConversationService {
    rpc SaveConversation(SaveConversationRequest) returns (Conversation) {}
    rpc GetConversation(GetConversationRequest) returns (GetConversationResponse) {}
    rpc GetConversationSummaries(GetConversationSummaryRequest) returns (stream ConversationSummary) {}

    rpc SaveMessage(SaveMessageRequest) returns (Message) {}
    rpc GetMessages(GetMessagesRequest) returns (stream Message);
    rpc GetLatestMessages(GetLatestMessageRequest) returns (stream LatestMessage) {}

    rpc SaveAttachment(SaveAttachmentRequest) returns (Attachment) {}
    rpc GetAttachments(GetAttachmentsRequest) returns (stream Attachment) {}
}

message GetLatestMessageRequest {
    string organization_id = 1;
}

message GetConversationSummaryRequest {
    string organization_id = 1;
}

message SaveConversationRequest {
    Conversation conversation = 1;
    calixa.domain.common.RequestContext request_context = 2;
    repeated calixa.domain.id.IntegrationOriginatedId mappings = 3;
}

message GetConversationRequest {
    string organization_id = 1;
    string canonical_conversation_id = 3;
}

message GetConversationResponse {
    Conversation conversation = 1;
    // In the future, this response message can eagerly return messages and attachments if requested.
}

message SaveMessageRequest {
    Message message = 1;
    calixa.domain.common.RequestContext request_context = 2;
}

message GetMessagesRequest {
    string organization_id = 1;
    oneof lookup_by {
        string conversation_id = 2;
        string canonical_message_id = 4;
    }
}

message SaveAttachmentRequest {
    Attachment attachment = 1;
    calixa.domain.common.RequestContext request_context = 2;
}

message GetAttachmentsRequest {
    string organization_id = 1;
    oneof lookup_by {
        string conversation_id = 2;
        string message_id = 3;
        string canonical_attachment_id = 5;
    }
}
